[package]
name = "oal-sys-windows"
description = "OpenAL bindings with Windows support"
version = "0.0.3"
authors = ["AlexApps99 <alex.apps99@gmail.com>", "sid <me@skillissuedev.net>"]
repository = "https://github.com/skillissuedev/oal-sys-windows"
keywords = ["openal", "oal", "sound", "audio", "openal-soft"]
categories = ["multimedia::audio", "external-ffi-bindings"]
edition = "2018"
links = "openal"
readme = "README.md"
license = "WTFPL"

[build-dependencies.bindgen]
version = "0.55.1"
optional = true

[features]
generate = ["bindgen"]
